# Autonometrics

./: .gitignore  CHANGELOG.md  LICENSE  README.es.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_FREEZE.md  ATLAS_GEOMETRY.md  CBA.md  CONSTRAINT_CLOSURE.md  FAILURE_MODES.md  LLM_TRANSCRIPT.md  PBA.es.md  PBA.md  RAI.md
docs/benchmarks/: atlas_geometry_v0.7.2a0.json  atlas_geometry_v0.7.2a0.log.txt  cba_env_decouple_v0.8.0a0.json  cba_env_decouple_v0.8.0a0.log.txt  cba_independence_v0.8.0a0.json  cba_independence_v0.8.0a0.log.txt  constraint_density_v0.6.1.csv  constraint_density_v0.6.1.log.txt  persistence_v0.7.0.csv  persistence_v0.7.0.log.txt  saturation_v0.5.1.csv  saturation_v0.5.1.log.txt  v0.5.0a0.csv  v0.5.0a0.log.txt  v0.6.0a0.csv  v0.6.0a0.log.txt  v0.7.0a0.csv  (+5 more)
examples/: atlas_geometry.py  atlas_geometry_plot.py  automaton_demo.py  benchmark_demo.py  benchmark_plot.py  cba_env_decouple_experiment.py  cba_independence_audit.py  constraint_density_diagnostic.py  constraint_density_plot.py  csv_demo.py  persistence_diagnostic.py  persistence_plot.py  saturation_diagnostic.py  saturation_plot.py
tests/: test_albantakis.py  test_automaton.py  test_automaton_replay.py  test_canonical_api.py  test_coherence.py  test_coherence_integration.py  test_constraint_closure.py  test_constraint_closure_adapters.py  test_core.py  test_csv_trajectory.py  test_excess_entropy.py  test_gershenson.py  test_integration.py  test_llm_transcript.py  test_memory_ratio.py  test_persistence.py  test_profile.py  test_profile_diagnostics.py  test_promised_cycle.py  test_smoke.py
(+37 files in other folders)
