[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonometrics"
version = "0.4.0a0"
description = "An instrument for quantifying structural self-determination across systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "bugerchip" }]
keywords = [
    "autonomy",
    "self-determination",
    "agency",
    "ai-alignment",
    "metrics",
    "information-theory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/bugerchip/Autonometrics"
Repository = "https://github.com/bugerchip/Autonometrics"
Issues = "https://github.com/bugerchip/Autonometrics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autonometrics"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
